--- a/Bibliografia/referencias.bib
+++ b/Bibliografia/referencias.bib
@@ -2,7 +2,7 @@
 % SAMPLE BIBLIOGRAPHY FILE
 % ------------------------------------------------------------------------
 
-@BOOK{texbook,
+@BOOK{hola,
    author = "Donald E. Knuth",
    title= "The {{\TeX}book}",
    publisher = "Addison-Wesley",
@@ -350,14 +350,6 @@
  year={1996},
 }
 
-@ARTICLE{Sim96b,
- author={A. Simoni\v{c}},
- title={An extension of {Lomonosov's} {Techniques} to non-compact
-       {Operators}},
- journal={Trans. Amer. Math. Soc.},
- volume={348},
- pages={975-995},
- year={1996},
-}
+@\bibitem{hola} juan chuek
 
 % ------------------------------------------------------------------------
