--- a/Capitulo1/introduccion.tex
+++ b/Capitulo1/introduccion.tex
@@ -38,7 +38,7 @@ Uno de los mayores avances tecnológicos de la humanidad ha sido el desarrollo d
 
 En el pasado la radio terapia utilizaba agujas de radio o rayos gamma de cobalto radioactivo, la desventaja de este tipo de maquinaria es que tienen que tener un funcionamiento ininterrumpido, y con el pasar del tiempo su energía decae y es necesario cambiar la fuente radioactiva y resguardarla del medio ambiente, la cual representa un peligro para la humanidad y un problema sin solución actual, ya que la contaminación es latente.\\
 
-Otro de los tantos ejemplos de las aplicaciones de estas tecnologías es en la rama de la fusión nuclear, ya que estas requieren fuentes de alto voltaje para su funcionamiento, en Mexico existe desarrollo en esta área. En la parte experimental, en 1978 se inició un proyecto mexicano de fusión termonuclear y, en 1983, se propuso el diseño de una pequeña máquina experimental llamada “Novillo”. Este (pequeño) Tokamak fue diseñado y construido por trabajadores mexicanos del ININ en el Centro Nuclear de Salazar, México. La continuación de los trabajos de investigación en el Tokamak Novillo, permitirá que el país se reincorpore a una de las áreas de investigación en Física de Plasmas más prometedoras para el futuro energético. La infraestructura existente y la experiencia adquirida, permitirán contribuir al desarrollo de una futura aplicación de la energía nuclear de fusión, la cual será una fuente alterna de energía en el presente siglo. La continuación de las investigaciones en fusión permitirá a los investigadores del ININ, el ingreso a programas bajo el auspicio del Organismo Internacional de Energía Atómica y a un futuro mediano, el ingreso a los trabajos relacionados con los proyectos ITER e IGNITOR.\cite{ININ}.\\
+Otro de los tantos ejemplos de las aplicaciones de estas tecnologías es en la rama de la fusión nuclear, ya que estas requieren fuentes de alto voltaje para su funcionamiento, en Mexico existe desarrollo en esta área. En la parte experimental, en 1978 se inició un proyecto mexicano de fusión termonuclear y, en 1983, se propuso el diseño de una pequeña máquina experimental llamada “Novillo”. Este Tokamak fue diseñado y construido por trabajadores mexicanos del ININ (Instituto Nacional de Investigaciones Nucleares) en el Centro Nuclear de Salazar, México.El trabajo con este acelerador, permitirá que el país se incorpore a una de las áreas de investigación en Física de Plasmas más prometedoras para el futuro energético. La infraestructura existente y la experiencia adquirida, permitirán contribuir al desarrollo de una futura aplicación de la energía nuclear de fusión, la cual será una fuente alterna de energía en el presente siglo. La continuación de investigaciones en fusion permitira a Mexico, el ingreso a programas del Organismo Internacional de Energía Atómica\cite{ININ}.\\
 
 Bajo la premisa de la ventaja del desarrollo tecnológico de los aceleradores de partículas para nuestro país, es necesario comenzar los estudios en estos temas, ya que las posibilidades de aplicación son bastas y de suma importancia. Con el pasar del tiempo las aplicaciones han aumentado considerablemente, desde ramas de la medicina como ya lo mencionamos, hasta sistemas de aislamiento por campo magnético de plasmas y sistemas para aumentar temperaturas hasta puntos de fusión para sistemas de generación de energía en plantas de fusión nuclear, los mexicanos han apostado por la participación en el desarrollo de estas tecnologías.\\
 
