--- a/tesis.tex
+++ b/tesis.tex
@@ -121,6 +121,11 @@ Acelerador lineal de electrones. \url{https://www.fis.cinvestav.mx/~sincrotron/d
 \bibitem{ININ}Instituto Nacional de Investigaciones Nucleares. FUSIÓN NUCLEAR. \url{http://www.inin.gob.mx/temasdeinteres/fusionnuclear.cfm}
 
 \bibitem{IPC 2152}Standard for Determining Current-Carrying Capacity In Printed Board Design. \url{http://electronica.ugr.es/~amroldan/cursos/2014/pcb/modulos/temas/IPC2152.pdf}
+
+\bibitem{transformador}Trasformadores. Miguel Angel Rodríguez Pozueta
+Doctor Ingeniero Industrial \url{http://personales.unican.es/rodrigma/PDFs/Trafos.pdf}
+
+\bibitem{rectificador}Rectificador de onda completa. Prof. Julima Anato \url{http://paginas.fisica.uson.mx/horacio.munguia/aula_virtual/Cursos/Instrumentacion\%20I/Documentos/Circuitos_Rectificadores.pdf}
 \end{thebibliography}
 
 
